# prosur

./: .classpath  .gitignore  .gitmodules  .project  .~lock.Pinout LLC board.ods#  .~lock.Tuning HC3D.odt#  .~lock.calib-diag-all.goodrun1-tempascent-300.csv#  .~lock.calib-diag-all.tempdescent-part1.csv#  .~lock.calib-diag-all.tempdescent-part2.csv#  Main.launch  Pinout LLC board.ods  Problemen hc3d.txt  README  README.md  Remote Debug HC3D.launch  Tech descr. HC3D ctr panel  build.xml  calib-diag-all.csv  calib-diag-all.goodrun1-tempascent-300.csv  calib-diag-all.tempdescent-part1.csv  calib-diag-all.tempdescent-part2.csv  config.ini  debug.sh  export-runnable-jar.xml  he-fan-term.sh  kill.sh  mjpg-streamer.sh  rad-fans-term.sh  relay-term.sh  reset-usb.sh  run.sh  start-mjpg-streamer.sh  start.sh  tail.sh  temp-a-term.sh  temps.sh
.github/workflows/: cmake.yml
datalog/: .~lock.2020-03-02T12_34_21.121.csv#  .~lock.2020-03-06T07_08_08.108.csv#  .~lock.2020-03-08T14_15_14.799.csv#  2009-10-22T21_13_14.csv  2020-02-11T06_40_55.524.csv  2020-02-11T06_57_49.519.csv  2020-02-11T07_08_49.170.csv  2020-02-11T07_19_14.946.csv  2020-02-11T19_44_41.061.csv  2020-02-11T21_58_10.256.csv  2020-02-12T07_02_37.227.csv  2020-02-12T07_10_41.802.csv  2020-02-13T06_04_20.657.csv  2020-02-13T07_20_19.990.csv  2020-02-15T10_50_52.160.csv  2020-02-29T15_24_42.499.csv  2020-02-29T15_27_32.615.csv  2020-02-29T15_29_03.638.csv  2020-02-29T15_29_43.317.csv  2020-02-29T15_52_02.597.csv  2020-02-29T16_26_24.447.csv  2020-03-01T08_24_23.468.csv  2020-03-01T09_35_55.396.csv  2020-03-01T15_53_24.709.csv  2020-03-02T11_11_43.191.csv  2020-03-02T11_25_37.566.csv  2020-03-02T12_34_21.121.csv  2020-03-02T12_38_29.501.csv  2020-03-02T12_57_17.784.csv  2020-03-02T13_01_07.925.csv  2020-03-02T18_33_14.059.csv  2020-03-02T22_39_54.376.csv  2020-03-03T19_51_05.291.csv  2020-03-03T20_00_22.533.csv  2020-03-03T20_24_57.290.csv  2020-03-03T20_32_48.117.csv  2020-03-03T20_53_14.509.csv  2020-03-03T20_59_48.895.csv  2020-03-03T21_17_10.437.csv  2020-03-03T21_32_11.735.csv  (+11 more)
doc/: PWM vs TACH test run.ods  pwm_test_2.csv  todo printer.txt
duet3d-backup/: config.g
embedded-eclipse-cdt-test/: .cproject  .project  config.h
embedded-eclipse-cdt-test/business_logic/: data_reader.c  data_reader.h  failsafe.h
embedded-eclipse-cdt-test/drivers/: driver_tach.h
embedded-eclipse-cdt-test/unit_test/: unit_tests.c
hc3d-cm/hc3d-tm/: hc3d-tm.atsln
hc3d-tm/: .cproject  .project  hc3d-tm.atsln  toolchain-links-and-info.txt
hc3d-tm/hc3d-tm/: hc3d-tm.cproj
hc3d-tm/hc3d-tm-sitl/: .cproject  .project
hc3d-tm/src/: config.h  main.c  old.txt  util.c  util.h
hc3d-webmon/: draw.js  draw.ts  get_llc_values.php  index.html  main.js  main.ts  tsconfig.json
hc3d-webmon/css/: main.css
hc3d-webmon/doc/: 000-default.conf  convert-all-legacy-files.php
hc3d-webmon/testdata/: index-of-mnt-data.html
hc3d-webmon/ts/: Draw.ts  Drawer.ts  Frame.ts  (+8 more)
llc-firmware/: -E  -E.d  .cproject  .project  hc3d_llc_firmware.ino  spec.d
llc-firmware.orig/: .project
prosurd/: .cproject  .gitignore  .project  CMakeLists.txt  client.html  database.sql  datebase.sql  dependencies.cmake  rr_model_job_example.json  run-remote.config  run-remote.sh  run.sh  test.c
prosurd/Generate PCH/: makefile
prosurd/build-prosurd-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  prosurd.cbp  rules.ninja
prosurd/build-prosurd-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-a195ef1d7116024bfed6.json  cmakeFiles-v1-8be8f9ad5f17f19a01f5.json  codemodel-v2-accad1b294ecf9e7f660.json  index-2021-11-09T05-42-31-0450.json  target-prosurd-Debug-c20cc7bd20031b0442a2.json
prosurd/build_TEST_FLAG_WEBMON_ONLY/: CMakeCache.txt  cmake_install.cmake
prosurd/build_arm/: CMakeCache.txt
prosurd/prosurd/: CMakeLists.txt
prosurd/prosurd/src/: main.cpp  rrfclient.cpp  rrfclient.hpp  util.cpp
prosurd/scripts/: build.sh  load-coredump.sh  run-postgresql.sh  run-prosurd.config.example  run-prosurd.sh  run-remote.config  run-remote.config.example  run-remote.sh  setup-pkgconfig-path.sh  tail-remote.sh
prosurd/src/: Const.hpp  DB.cpp  DB.hpp  Log.cpp  Log.hpp  Main.cpp  Main.hpp  cclient.cpp  cclient.hpp  dbclient.cpp  dbclient.hpp  main.cpp  pch.hpp  prosurd.cpp  prosurd.hpp  rrfclient.cpp  rrfclient.hpp  tmclient.cpp  tmclient.hpp  util.cpp  util.hpp
prosurd/src/AuxTempClient/: AuxTempClient.cpp  AuxTempClient.hpp
prosurd/src/CameraClient/: CameraClient.cpp  CameraClient.hpp
prosurd/src/Database/: DBParam.hpp  DBUtil.cpp  DBUtil.hpp  DBValue.hpp  Database.cpp  Database.hpp  Frame.cpp  Frame.hpp  OID.hpp
prosurd/src/DatabaseClient/: DBUtil.cpp  DBUtil.hpp  DatabaseClient.cpp  DatabaseClient.hpp
prosurd/src/Datasource/AuxTemp/: AuxTemp.cpp  AuxTemp.hpp
prosurd/src/Datasource/Camera/: Camera.cpp  Camera.hpp  Camera2.cpp
prosurd/src/Datasource/RepRap/: HTTPUtil.cpp  HTTPUtil.hpp  RepRap.cpp  RepRap.hpp
prosurd/src/HTTPClient/: HTTPClient.cpp  HTTPClient.hpp
prosurd/src/JobFile/: JobFile.cpp  JobFile.hpp
prosurd/src/JobFile/ParameterExtractor/: PrusaSlicer.cpp  PrusaSlicer.hpp
prosurd/src/RepRapClient/: HTTPUtil.cpp  HTTPUtil.hpp  RepRapClient.cpp  RepRapClient.hpp
prosurd/src/Test/: AuxTempClientMock.cpp  AuxTempMock.cpp  CameraClientMock.cpp  CameraMock.cpp  HTTPClientMock.cpp  HTTPMock.cpp  HTTPUtilMock.cpp  MainTestCamera.cpp  MainTestHTTPClient.cpp
prosurd/src/Util/: Util.cpp  Util.hpp
prosurd/src/Webserver/: HTTPResponseBody.hpp  Webserver.cpp  Webserver.hpp
prosurd/src/Webserver/Resources/: Client.cpp  Client.hpp  File.cpp  File.hpp  Frames.cpp  Frames.hpp  Job.cpp  Job.hpp  Jobs.cpp  Jobs.hpp  List.cpp  List.hpp
prosurd/src/util/: isotime.hpp
prosurd/testdata/: rr_model_example.json  testjob.gcode
recirfan-emb/: recirfan-emb.ino
scripts/: crontab  fstab  hc3d-tm-mon.sh  mjpg-streamer.sh  post-receive.sh  reset-usb.sh  setup-linux-system-commands.txt  tail-hc3d-tm-log.sh
tm/: .cproject  .project  hc3d-tm.fuses  toolchain-links-and-info.txt
webmon/: index.html  main.css  main.js  tsconfig.json
(+319 files in other folders)
